--- a/Mapping_Single_Points/index.html
+++ b/Mapping_Single_Points/index.html
@@ -21,6 +21,7 @@
     <div id="mapid"></div>
 
     <script src="static/js/config.js"></script>
+        <script src="static/js/cities.js"></script>
     <script src="static/js/logic.js"></script>
 </body>
 </html>
