--- a/Mapping_GeoJSON_Points/index.html
+++ b/Mapping_GeoJSON_Points/index.html
@@ -13,16 +13,15 @@
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
 
+    <script src="https://unpkg.com/simple-statistics@7.0.8/dist/simple-statistics.min.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>asssffssdaq</h1>
+    <h1>GeoJSON Demonstration</h1>
     <div id="mapid"></div>
 
     <script src="static/js/config.js"></script>
-    <script src="static/js/cities.js"></script>
-    <script src="static/js/majorAirports.js"></script>
     <script src="static/js/logic.js"></script>
 </body>
 </html>
